--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,21 @@
-
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+:root {
+  --black: #0a0908;
+  --dark-gray: #201a23;
+  --light-gray: #6f8695;
+  --red: #a63d40;
+}
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+}
+#root {
+  padding: 20px;
+  display: grid;
+  grid-template: 4fr 1fr / 2fr 3fr;
+  height: 100vh;
+  * {
+    max-width: 100%;
+  }
+}
