--- a/src/components/PersonalCard.css
+++ b/src/components/PersonalCard.css
@@ -1,6 +1,80 @@
-li {
-  cursor: pointer;
-  &.selected {
-    color: red;
+.personalCard {
+  grid-row: 1 / 2;
+  grid-column: 1 / 2;
+  background-color: var(--dark-gray);
+  border: 2px solid var(--red);
+  padding: 40px 60px;
+  border-radius: 40px;
+  .personalInfo {
+    h1 {
+      background: linear-gradient(to right, #fff 0%, #999999 40%);
+      background-clip: text;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      font-size: 5rem;
+      font-weight: 700;
+    }
+    h2 {
+      font-size: 1.5rem;
+      color: var(--light-gray);
+      font-weight: 400;
+    }
+    .location {
+      display: flex;
+      p {
+        font-size: 1rem;
+        color: white;
+        font-weight: 300;
+      }
+    }
+  }
+  .navigation {
+    li {
+      cursor: pointer;
+      color: var(--light-gray);
+      transition: 0.3s;
+      &:hover {
+        color: white;
+        transition: 0.3s;
+      }
+      &.selected {
+        color: white;
+      }
+    }
+  }
+  button {
+    border: white solid 2px;
+    background-color: transparent;
+    color: white;
+    border-radius: 25px;
+    padding: 20px 40px;
+    font-size: 1.2rem;
+    transition: 0.3s;
+    position: relative;
+    z-index: 1;
+  }
+  button:hover {
+    color: var(--dark-gray);
+    transition: 0.3s;
+    cursor: pointer;
+  }
+  button::after {
+    content: " ";
+    position: absolute;
+    background-color: white;
+    width: 0%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 0%;
+    z-index: -1;
+    transition: 0.3s;
+    border-radius: 25px;
+  }
+  button:hover::after {
+    width: 100%;
+    height: 100%;
+    border: inherit;
+    transition: 0.3s;
   }
 }
