base style of techstack, imported svgs for technologies

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
   font-family: "Roboto", sans-serif;
 }
 #root {
+  background-color: black;
   padding: 20px;
   display: grid;
   grid-template: 4fr 1fr / 2fr 3fr;
