Some styles on Experience component, fixed scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -9,13 +9,14 @@
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
+  box-sizing: border-box;
 }
 #root {
-  background-color: black;
+  height: 100vh;
   padding: 20px;
+  background-color: black;
   display: grid;
   grid-template: 4fr 1fr / 2fr 3fr;
-  height: 100vh;
   * {
     max-width: 100%;
   }
