--- a/src/components/ContactGroup.css
+++ b/src/components/ContactGroup.css
@@ -3,14 +3,22 @@
   grid-column: 1 / 2;
   display: flex;
   flex-direction: column;
+  margin-left: 20px;
+  h2 {
+    color: white;
+    font-size: 2rem;
+  }
   a {
     display: flex;
     align-items: center;
     text-decoration: none;
+    color: white;
+    font-size: 0.8rem;
+    font-weight: 300;
     img {
-      width: 40px;
-      margin-right: 10px;
+      width: 30px;
+      margin-right: 20px;
     }
-    margin: 5px;
+    margin: 15px 10px 0 0;
   }
 }
