--- a/src/components/PersonalCard.css
+++ b/src/components/PersonalCard.css
@@ -5,6 +5,9 @@
   border: 2px solid var(--red);
   padding: 40px 60px;
   border-radius: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   .personalInfo {
     h1 {
       background: linear-gradient(to right, #fff 0%, #999999 40%);
@@ -18,6 +21,7 @@
       font-size: 1.5rem;
       color: var(--light-gray);
       font-weight: 400;
+      margin-bottom: 20px;
     }
     .location {
       display: flex;
@@ -25,20 +29,26 @@
         font-size: 1rem;
         color: white;
         font-weight: 300;
+        margin: 5px 0 0 5px;
       }
     }
   }
   .navigation {
+    margin-left: 5%;
     li {
       cursor: pointer;
       color: var(--light-gray);
       transition: 0.3s;
+      font-size: 1.3rem;
+      line-height: 2rem;
       &:hover {
         color: white;
         transition: 0.3s;
       }
       &.selected {
         color: white;
+        font-size: 1.5rem;
+        transition: 0.3s;
       }
     }
   }
@@ -47,11 +57,13 @@
     background-color: transparent;
     color: white;
     border-radius: 25px;
-    padding: 20px 40px;
+    padding: 20px 20px;
     font-size: 1.2rem;
     transition: 0.3s;
     position: relative;
     z-index: 1;
+    width: 40%;
+    align-self: center;
   }
   button:hover {
     color: var(--dark-gray);
