--- a/src/components/Experience.css
+++ b/src/components/Experience.css
@@ -3,6 +3,7 @@
   padding: 40px 60px;
   color: white;
   border-radius: 40px;
+  margin-bottom: 40px;
   h2 {
     background: linear-gradient(to right, #fff 0%, #999999 40%);
     background-clip: text;
@@ -11,6 +12,17 @@
     font-size: 3rem;
     font-weight: 400;
     margin-bottom: 30px;
+    position: relative;
+  }
+  h2::after {
+    content: "";
+    position: absolute;
+    height: 1px;
+    width: 80%;
+    background: white;
+    bottom: -20%;
+    left: 0;
+    margin: 0 auto;
   }
   li {
     h3 {
