--- a/src/components/PersonalCard.css
+++ b/src/components/PersonalCard.css
@@ -52,7 +52,10 @@
       }
     }
   }
-  button {
+  a.downloadCV {
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
     border: white solid 2px;
     background-color: transparent;
     color: white;
@@ -65,12 +68,12 @@
     width: 40%;
     align-self: center;
   }
-  button:hover {
+  a.downloadCV:hover {
     color: var(--dark-gray);
     transition: 0.3s;
     cursor: pointer;
   }
-  button::after {
+  a.downloadCV::after {
     content: " ";
     position: absolute;
     background-color: white;
@@ -83,7 +86,7 @@
     transition: 0.3s;
     border-radius: 25px;
   }
-  button:hover::after {
+  a.downloadCV:hover::after {
     width: 100%;
     height: 100%;
     border: inherit;
