--- a/src/components/ScrollPage.css
+++ b/src/components/ScrollPage.css
@@ -3,7 +3,14 @@
   grid-row: 1 / 3;
   overflow-y: scroll;
   scroll-behavior: smooth;
+  padding-right: 10px;
 }
 ::-webkit-scrollbar {
-  display: none;
+  width: 1px;
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background: white;
 }
