--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
 }
 #root {
   height: 100vh;
-  padding: 20px 10px 20px 40px;
+  padding: 40px 80px 20px 80px;
   background: #381516;
   background: radial-gradient(
     circle,
@@ -26,4 +26,13 @@
     max-width: 100%;
   }
   gap: 15px 40px;
+}
+@media only screen and (max-width: 1200px) {
+  #root {
+    display: flex;
+    flex-direction: column;
+  }
+  #scrollPage {
+    overflow: visible;
+  }
 }
