--- a/src/components/Experience.css
+++ b/src/components/Experience.css
@@ -1,6 +1,6 @@
 #Experience {
   background-color: var(--dark-gray);
-  padding: 40px 60px;
+  padding: 40px 60px 10px 60px;
   color: white;
   border-radius: 40px;
   margin-bottom: 40px;
@@ -11,8 +11,8 @@
     -webkit-text-fill-color: transparent;
     font-size: 3rem;
     font-weight: 400;
-    margin-bottom: 30px;
     position: relative;
+    margin-bottom: 50px;
   }
   h2::after {
     content: "";
@@ -25,12 +25,19 @@
     margin: 0 auto;
   }
   li {
+    margin-bottom: 40px;
+    &::marker {
+      font-size: 2rem;
+      margin-top: 50%;
+      color: white;
+    }
     h3 {
       font-size: 2rem;
       font-weight: 400;
     }
     h4 {
       color: var(--light-gray);
+      margin-bottom: 10px;
       font-weight: 400;
     }
   }
