--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -27,6 +27,12 @@
   ul {
     list-style: none;
     li {
+      transition: 0.2s;
+      &:hover {
+        transition: 0.2s;
+
+        transform: scale(1.01);
+      }
       border: white solid 2px;
       border-radius: 40px;
       margin-bottom: 40px;
@@ -49,6 +55,18 @@
           white-space: pre-line;
           line-height: 1.4rem;
         }
+      }
+    }
+  }
+  .git {
+    width: 100%;
+    text-align: center;
+    transition: 0.2s;
+    a {
+      transition: 0.2s;
+      color: white;
+      &:hover {
+        color: var(--light-gray);
       }
     }
   }
