mobile styles for personalcard, arrow, altered projects tsx

--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,7 @@
     height: auto;
     display: flex;
     flex-direction: column;
+    align-items: center;
   }
   #scrollPage {
     overflow: visible;
