--- a/src/components/PersonalCard.css
+++ b/src/components/PersonalCard.css
@@ -94,10 +94,24 @@
   }
 }
 @media only screen and (max-width: 1200px) {
+  #scrollButton {
+    background-color: transparent;
+    border: none;
+    color: white;
+    font-size: 1.2rem;
+    font-weight: 600;
+    display: flex;
+    flex-direction: column;
+    padding: 20px 0px;
+    width: 100px;
+    justify-content: space-between;
+    gap: 10px;
+  }
   .personalCard {
     padding: 60px 40px 25px 40px;
     align-items: center;
     text-align: center;
+    width: 100%;
     .personalInfo {
       h1 {
         font-size: 3rem;
@@ -116,7 +130,7 @@
       }
     }
     a.downloadCV {
-      width: 80%;
+      width: 200px;
       border: 3px solid white;
       margin-bottom: 15px;
       font-size: 1.4rem;
