--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -3,6 +3,7 @@
   padding: 40px 60px;
   color: white;
   border-radius: 40px;
+  margin-bottom: 40px;
   h2 {
     background: linear-gradient(to right, #fff 0%, #999999 40%);
     background-clip: text;
@@ -67,6 +68,31 @@
       color: white;
       &:hover {
         color: var(--light-gray);
+      }
+    }
+  }
+}
+@media only screen and (max-width: 1200px) {
+  #Projects {
+    display: flex;
+    flex-direction: column;
+    h2 {
+      text-align: center;
+      margin-bottom: 40px;
+    }
+    h2::after {
+      left: 50%;
+      transform: translate(-50%, 0);
+    }
+    ul {
+      li {
+        background: none !important;
+        img {
+          width: 80%;
+          aspect-ratio: 1;
+          object-position: 100%;
+          object-fit: contain;
+        }
       }
     }
   }
