--- a/src/components/ScrollPage.css
+++ b/src/components/ScrollPage.css
@@ -14,3 +14,14 @@
 ::-webkit-scrollbar-thumb {
   background: white;
 }
+@media only screen and (max-width: 1200px) {
+  #scrollPage {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0;
+  }
+  ::-webkit-scrollbar {
+    display: none;
+  }
+}
