first build, contact on mobile missing

--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -4,6 +4,9 @@
   color: white;
   border-radius: 40px;
   margin-bottom: 40px;
+  & > img {
+    display: none;
+  }
   h2 {
     background: linear-gradient(to right, #fff 0%, #999999 40%);
     background-clip: text;
@@ -76,6 +79,8 @@
   #Projects {
     display: flex;
     flex-direction: column;
+    position: relative;
+    padding: 40px 40px;
     h2 {
       text-align: center;
       margin-bottom: 40px;
@@ -84,14 +89,70 @@
       left: 50%;
       transform: translate(-50%, 0);
     }
+    img.leftArrow {
+      position: absolute;
+      width: 10%;
+      left: 20px;
+      top: 50%;
+      display: block;
+      cursor: pointer;
+      z-index: 1;
+    }
+    img.rightArrow {
+      position: absolute;
+      width: 10%;
+      scale: -1;
+      right: 20px;
+      top: 50%;
+      overflow: visible;
+      display: block;
+      cursor: pointer;
+      z-index: 1;
+    }
     ul {
       li {
-        background: none !important;
-        img {
-          width: 80%;
-          aspect-ratio: 1;
-          object-position: 100%;
-          object-fit: contain;
+        display: none;
+        border: solid #fff 3px;
+        overflow: hidden;
+        &.visible {
+          display: flex;
+        }
+        a {
+          width: 100%;
+          padding-top: 40px;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          background: linear-gradient(
+            -45deg,
+            rgba(62, 62, 62, 0.4) 40%,
+            rgba(164, 164, 164, 0.4) 100%
+          ) !important;
+          h3 {
+            font-size: 1.6rem;
+            align-self: flex-start;
+          }
+          h4 {
+            align-self: flex-start;
+            margin-bottom: 20px;
+          }
+          .line {
+            height: 2px;
+            background-color: white;
+            width: 60%;
+            margin: 20px 0;
+          }
+          p {
+            font-size: 0.8rem;
+          }
+          img {
+            width: 100%;
+            aspect-ratio: 5 / 4;
+            object-position: 100%;
+            object-fit: cover;
+            object-position: center;
+            border: solid #fff 3px;
+          }
         }
       }
     }
