--- a/src/components/ContactGroup.css
+++ b/src/components/ContactGroup.css
@@ -22,3 +22,27 @@
     margin: 15px 10px 0 0;
   }
 }
+@media only screen and (max-width: 1200px) {
+  .contacts {
+    position: absolute;
+    background-color: var(--dark-gray);
+    border: 2px solid var(--red);
+    border-radius: 40px;
+    width: 110%;
+    padding: 30px 10px 40px 10px;
+    margin: 0;
+    z-index: 3;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    table > tbody > tr {
+      display: flex;
+      flex-direction: column;
+
+      a {
+        margin: 20px 0 0 20px;
+        text-align: left;
+      }
+    }
+  }
+}
