--- a/src/components/PersonalCard.css
+++ b/src/components/PersonalCard.css
@@ -1,4 +1,5 @@
 .personalCard {
+  position: relative;
   grid-row: 1 / 2;
   grid-column: 1 / 2;
   background-color: var(--dark-gray);
@@ -94,6 +95,15 @@
   }
 }
 @media only screen and (max-width: 1200px) {
+  .visible {
+    display: block;
+    & > .contacts {
+      display: flex !important;
+    }
+  }
+  .hidden {
+    display: none;
+  }
   #scrollButton {
     background-color: transparent;
     border: none;
